deprecation on ajax jquery methods

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
     </div>
   </div>
   
-  <div class="row" >    
+  <div class="row" >        
     <div class="col-md-12 results" id="results" >      
+      <div class="row" id="divLoading">
+        <img src="build/img/default.gif" class="hidden">
+      </div>
     </div>
   </div>
   
